<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_buku"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/buku"/>
    <item
        android:id="@+id/menu_musik"
        android:icon="@drawable/baseline_library_music_24"
        android:title="@string/musik"/>
    <item
        android:id="@+id/menu_film"
        android:icon="@drawable/baseline_movie_24"
        android:title="@string/film"/>
    <item
        android:id="@+id/menu_vidio"
        android:icon="@drawable/baseline_video_library_24"
        android:title="@string/vidio"/>
    <item
        android:id="@+id/menu_foto"
        android:icon="@drawable/baseline_photo_library_24"
        android:title="@string/foto"/>


</menu>